# DECX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  containerize.bash  singularity.def
doc/: DECX_manual.tex  README.md
src/: .gitignore  BayesianBioGeo.h  BioGeoTree.cpp  BioGeoTree.h  BioGeoTreeTools.cpp  BioGeoTreeTools.h  BranchSegment.cpp  BranchSegment.h  CMakeLists.txt  InputReader.cpp  InputReader.h  OptimizeBioGeo.cpp  OptimizeBioGeo.h  OptimizeBioGeoAllDispersal.cpp  RateMatrixUtils.cpp  RateMatrixUtils.h  RateModel.cpp  RateModel.h  Utils.cpp  Utils.h  adj_parsing.cpp  adj_parsing.hpp  config_parsing.cpp  config_parsing.hpp  config_parsing.tpp  distrib_parsing.cpp  distrib_parsing.hpp  distrib_parsing_areas.cpp  distrib_parsing_legacy.cpp  distrib_parsing_species.cpp  double_node_object.h  lexer.cpp  lexer.hpp  main.cpp  makefile.champak  makefile.mac  makefile.win  node.cpp  node.h  rates_parsing.cpp  (+5 more)
tests/input/: README.md  edit.py  expect.py  folders.py  main.bash  main.py  manager.py  popen.py
tests/input/dummy_files/: config.toml  distrib_areas_lines.txt  distrib_blank.txt  distrib_legacy.txt
tests/input/input/: adjacency.txt  config.toml  decx  distrib_areas_lines.txt  distrib_species_lines.txt  newick.tre
tests/input/specs/: areas_lines_distributions  config  config.clib  legacy_distributions  main.clib  period_matrices_reader.py  species_lines_distributions
tests/input/specs/adjacency_matrices/: adjacency_reader.py  failures.clib  main.clib  relative.clib  successes.clib
tests/input/specs/distribution_matrix/: areas_lines_distributions.clib  distribution_reader.py  legacy_distributions.clib  main.clib  species_lines_distributions.clib
tests/input/specs/rates_matrices/: failures.clib  main.clib  relative.clib  successes.clib
tools/: mac_prepare_static_bin.sh
